<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">heppaharkka</string>
    <string name="action_settings">Settings</string>
    
    <string name="tietokanta">Tietokanta</string>
    <string name="tunnus">Tunnus</string>
    <string name="salasana">Salasana</string>
    <string name="lataanappi">Lataa</string>
    <string name="logitus">logitus</string>
    <string name="lisaanappi"> Lisää </string>
    <string name="einappi"> Ei </string>

</resources>